cmake_minimum_required(VERSION 3.0)
project(AlgorithmCpp)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(INCLUDE_DIR ./include)
aux_source_directory(./src SRC)
add_executable(AlgorithmCpp ${SRC})
target_include_directories(AlgorithmCpp PUBLIC ${INCLUDE_DIR})